Added two more search result filters.

--- a/cvpWebApi/canada-vigilance-fr.html
+++ b/cvpWebApi/canada-vigilance-fr.html
@@ -112,6 +112,8 @@
                                 <input name="ageRange" type="hidden" id="ageRange" />
                                 <input name="startDate" type="hidden" id="startDate" />
                                 <input name="endDate" type="hidden" id="endDate" />
+                                <input name="sourceOfReport" type="hidden" id="sourceOfReport" />
+                                <input name="reportOutcome" type="hidden" id="reportOutcome" />  
                                 <datalist id="list-liste" data-ajax-replace=".././list-liste-eng.txt" class="wb-data-ajax-replace-inited"> </datalist>
                             </div>
 
