--- a/cvpWebApi/canada-vigilance.html
+++ b/cvpWebApi/canada-vigilance.html
@@ -111,8 +111,10 @@
                                 <input name="gender" type="hidden" id="gender" />
                                 <input name="seriousReport" type="hidden" id="seriousReport" />
                                 <input name="ageRange" type="hidden" id="ageRange" />
+                                <input name="sourceOfReport" type="hidden" id="sourceOfReport" />
+                                <input name="reportOutcome" type="hidden" id="reportOutcome" />  
                                 <input name="startDate" type="hidden" id="startDate" />
-                                <input name="endDate" type="hidden" id="endDate" />
+                                <input name="endDate" type="hidden" id="endDate" />                                                              
                                 <datalist id="list-liste" data-ajax-replace=".././list-liste-eng.txt" class="wb-data-ajax-replace-inited"> </datalist>
                             </div>
 
