Modified Age Range dropdowns as per client request.

--- a/cvpWebApi/canada-vigilance-result.html
+++ b/cvpWebApi/canada-vigilance-result.html
@@ -108,11 +108,9 @@
                                 <label for="ageRange">Age Range</label>
                                 <select class="form-control" name="ageRange" id="ageRange">
                                     <option value="">All</option>
-                                    <option value="0-20">0-20</option>
-                                    <option value="21-40">21-40</option>
-                                    <option value="41-60">41-60</option>
-                                    <option value="61-80">61-80</option>
-                                    <option value="80">80+</option>
+                                    <option value="0-17">0-17 (Pediatric)</option>
+                                    <option value="18-65">18-65 (Adult)</option>
+                                    <option value="65">65+ (Elderly)</option>
                                 </select>
                             </div>
                             <div class="col-md-2 col-sm-2" id="gender-filter-section">
