Changed Initial Received filter to Latest Received Date

--- a/cvpWebApi/canada-vigilance-result.html
+++ b/cvpWebApi/canada-vigilance-result.html
@@ -156,7 +156,7 @@
                             <!--<div class="wb-frmvld">
                             <form action="#" method="get" id="validation-example">-->
                             <div class="col-md-2 col-sm-2 form-group" id="date-filter-section">
-                                <span class="field-name">Initial Received Date</span><br/>
+                                <span class="field-name"><strong>Latest Received Date</strong></span><br/>
                                 <label for="startDate" control-label"><span class="field-name">From</span><span class="datepicker-format"> (<abbr title="Four digits year, dash, two digits month, dash, two digits day">YYYY-MM-DD</abbr>)</span>:</label>
                                 <input class="form-control" type="date" id="startDate" name="startDate" min="1965-01-01" data-rule-dateiso="true" />
 
