--- a/cvpWebApi/canada-vigilance-resultat.html
+++ b/cvpWebApi/canada-vigilance-resultat.html
@@ -153,7 +153,7 @@
                                 </select>
                             </div>
                             <div class="col-md-2 col-sm-2 form-group" id="date-filter-section">
-                                <span class="field-name">Date de réception initiale</span><br/>
+                                <span class="field-name"><strong>Date de la dernière réception</strong></span><br/>
                                 <label for="startDate" control-label"><span class="field-name">De</span><span class="datepicker-format"> (<abbr title="Les quatres chiffres de l'année, tiret, les deux chiffres du mois, tiret, les deux chiffres du jour">aaaa-mm-jj</abbr>)</span> :</label>
                                 <input class="form-control" type="date" id="startDate" name="startDate" min="1965-01-01" data-rule-dateiso="true" />
 
