--- a/cvpWebApi/index-en.html
+++ b/cvpWebApi/index-en.html
@@ -116,67 +116,80 @@
                             <td>Drug product ingredient:</td>
                             <td><a class="btn btn-default" href="./api-v1/drugproductingredient/?lang=en&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./api-v1/drugproductingredient/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=ingredient">CSV (Download)</a></td>
                         </tr>
                         <tr>
                             <td>Drug Products:</td>
                             <td> <a class="btn btn-default" href="./api-v1/drugproduct/?lang=en&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./api-v1/drugproduct/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=products">CSV (Download)</a></td>
                         </tr>
                         <tr>
                             <td>Gender:</td>
                             <td> <a class="btn btn-default" href="./api-v1/gender/?lang=en&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./api-v1/gender/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=gender">CSV (Download)</a></td>
                         </tr>
                         <tr>
                             <td>Outcome:</td>
                             <td> <a class="btn btn-default" href="./api-v1/outcome/?lang=en&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./api-v1/outcome/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=outcome">CSV (Download)</a></td>
                         </tr>
                         <tr>
                             <td>Reaction:</td>
                             <td> <a class="btn btn-default" href="./api-v1/reaction/?lang=en&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./api-v1/reaction/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=reaction">CSV (Download)</a></td>
                         </tr>
                         <tr>
                             <td>Report Drug:</td>
                             <td> <a class="btn btn-default" href="./api-v1/reportdrug/?lang=en&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./api-v1/reportdrug/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=reportDrug">CSV (Download)</a></td>
                         </tr>
 
                         <tr>
                             <td>Report Link:</td>
                             <td><a class="btn btn-default" href="./api-v1/reportlink/?lang=en&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./api-v1/reportlink/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=reportLink">CSV (Download)</a></td>
                         </tr>
                         <tr>
                             <td>Report Type:</td>
                             <td><a class="btn btn-default" href="./api-v1/reporttype/?lang=en&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./api-v1/reporttype/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=reportType">CSV (Download)</a></td>
                         </tr>
                         <tr>
                             <td>Report:</td>
                             <td><a class="btn btn-default" href="./api-v1/report/?lang=en&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./api-v1/report/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=report">CSV (Download)</a></td>
                         </tr>
                         <tr>
                             <td>All Report by Drug Name:<input type="text" id="strDrugName" size="15" /></td>
                             <td><a class="btn btn-default" href='' onclick="this.href='./api-v1/report/?drug_name=' + '%' + document.getElementById('strDrugName').value + '%' + '&lang=en&type=json'">Json</a></td>
                             <td><a class="btn btn-default" href='' onclick="this.href = './api-v1/report/?drug_name=' + '%' + document.getElementById('strDrugName').value + '%' + '&lang=fr&type=xml'">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=drugName">CSV (Download)</a></td>
                         </tr>
                         <tr>
                             <td>Seriousness:</td>
                             <td><a class="btn btn-default" href="./api-v1/seriousness/?lang=en&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./api-v1/seriousness/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=seriousness">CSV (Download)</a></td>
                         </tr>
                         <tr>
                             <td>Source:</td>
                             <td><a class="btn btn-default" href="./api-v1/source/?lang=en&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./api-v1/source/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=source">CSV (Download)</a></td>
                         </tr>
                         <tr>
                             <td>All Report Info:</td>
                             <td><a class="btn btn-default" href="./api-v1/reportinfo/?lang=en&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./api-v1/reportinfo/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=info">CSV (Download)</a></td>
                         </tr>
                     </tbody>
                 </table>
