Added French Downloads

--- a/cvpWebApi/index-en.html
+++ b/cvpWebApi/index-en.html
@@ -113,84 +113,193 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Drug product ingredient:</td>
+                            <td>Drug product ingredient - English:</td>
                             <td><a class="btn btn-default" href="./api-v1/drugproductingredient/?lang=en&type=json">Json</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/drugproductingredient/?lang=en&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=ingredient&lang=en">CSV (Download)</a></td>
+                        </tr>
+                        <tr>
+                            <td>Drug product ingredient - French:</td>
+                            <td><a class="btn btn-default" href="./api-v1/drugproductingredient/?lang=fr&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./api-v1/drugproductingredient/?lang=fr&type=xml">XML</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=ingredient">CSV (Download)</a></td>
-                        </tr>
-                        <tr>
-                            <td>Drug Products:</td>
-                            <td> <a class="btn btn-default" href="./api-v1/drugproduct/?lang=en&type=json">Json</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/drugproduct/?lang=fr&type=xml">XML</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=products">CSV (Download)</a></td>
-                        </tr>
-                        <tr>
-                            <td>Gender:</td>
-                            <td> <a class="btn btn-default" href="./api-v1/gender/?lang=en&type=json">Json</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/gender/?lang=fr&type=xml">XML</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=gender">CSV (Download)</a></td>
-                        </tr>
-                        <tr>
-                            <td>Outcome:</td>
-                            <td> <a class="btn btn-default" href="./api-v1/outcome/?lang=en&type=json">Json</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/outcome/?lang=fr&type=xml">XML</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=outcome">CSV (Download)</a></td>
-                        </tr>
-                        <tr>
-                            <td>Reaction:</td>
-                            <td> <a class="btn btn-default" href="./api-v1/reaction/?lang=en&type=json">Json</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/reaction/?lang=fr&type=xml">XML</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=reaction">CSV (Download)</a></td>
-                        </tr>
-                        <tr>
-                            <td>Report Drug:</td>
-                            <td> <a class="btn btn-default" href="./api-v1/reportdrug/?lang=en&type=json">Json</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/reportdrug/?lang=fr&type=xml">XML</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=reportDrug">CSV (Download)</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=ingredient&lang=fr">CSV (Download)</a></td>
                         </tr>
 
+
+
                         <tr>
-                            <td>Report Link:</td>
+                            <td>Drug Products - English:</td>
+                            <td> <a class="btn btn-default" href="./api-v1/drugproduct/?lang=en&type=json">Json</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/drugproduct/?lang=en&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=products&lang=en">CSV (Download)</a></td>
+                        </tr>
+                        <tr>
+                            <td>Drug Products - French:</td>
+                            <td> <a class="btn btn-default" href="./api-v1/drugproduct/?lang=fr&type=json">Json</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/drugproduct/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=products&lang=fr">CSV (Download)</a></td>
+                        </tr>
+
+
+                        <tr>
+                            <td>Gender - English:</td>
+                            <td> <a class="btn btn-default" href="./api-v1/gender/?lang=en&type=json">Json</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/gender/?lang=en&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=gender&lang=en">CSV (Download)</a></td>
+                        </tr>
+                        <tr>
+                            <td>Gender - French:</td>
+                            <td> <a class="btn btn-default" href="./api-v1/gender/?lang=fr&type=json">Json</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/gender/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=gender&lang=fr">CSV (Download)</a></td>
+                        </tr>
+
+
+                        <tr>
+                            <td>Outcome - English:</td>
+                            <td> <a class="btn btn-default" href="./api-v1/outcome/?lang=en&type=json">Json</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/outcome/?lang=en&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=outcome&lang=en">CSV (Download)</a></td>
+                        </tr>
+                        <tr>
+                            <td>Outcome - French:</td>
+                            <td> <a class="btn btn-default" href="./api-v1/outcome/?lang=fr&type=json">Json</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/outcome/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=outcome&lang=fr">CSV (Download)</a></td>
+                        </tr>
+
+
+                        <tr>
+                            <td>Reaction - English:</td>
+                            <td> <a class="btn btn-default" href="./api-v1/reaction/?lang=en&type=json">Json</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/reaction/?lang=en&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=reaction&lang=en">CSV (Download)</a></td>
+                        </tr>
+                        <tr>
+                            <td>Reaction - French:</td>
+                            <td> <a class="btn btn-default" href="./api-v1/reaction/?lang=fr&type=json">Json</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/reaction/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=reaction&lang=fr">CSV (Download)</a></td>
+                        </tr>
+
+
+
+                        <tr>
+                            <td>Report Drug - English:</td>
+                            <td> <a class="btn btn-default" href="./api-v1/reportdrug/?lang=en&type=json">Json</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/reportdrug/?lang=en&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=reportDrug&lang=en">CSV (Download)</a></td>
+                        </tr>
+                        <tr>
+                            <td>Report Drug - French:</td>
+                            <td> <a class="btn btn-default" href="./api-v1/reportdrug/?lang=fr&type=json">Json</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/reportdrug/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=reportDrug&lang=fr">CSV (Download)</a></td>
+                        </tr>
+
+
+
+                        <tr>
+                            <td>Report Link - English:</td>
                             <td><a class="btn btn-default" href="./api-v1/reportlink/?lang=en&type=json">Json</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/reportlink/?lang=en&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=reportLink&lang=en">CSV (Download)</a></td>
+                        </tr>
+                        <tr>
+                            <td>Report Link - French:</td>
+                            <td><a class="btn btn-default" href="./api-v1/reportlink/?lang=fr&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./api-v1/reportlink/?lang=fr&type=xml">XML</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=reportLink">CSV (Download)</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=reportLink&lang=fr">CSV (Download)</a></td>
                         </tr>
+
+
                         <tr>
-                            <td>Report Type:</td>
+                            <td>Report Type - English:</td>
                             <td><a class="btn btn-default" href="./api-v1/reporttype/?lang=en&type=json">Json</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/reporttype/?lang=en&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=reportType&lang=en">CSV (Download)</a></td>
+                        </tr>
+                        <tr>
+                            <td>Report Type - French:</td>
+                            <td><a class="btn btn-default" href="./api-v1/reporttype/?lang=fr&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./api-v1/reporttype/?lang=fr&type=xml">XML</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=reportType">CSV (Download)</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=reportType&lang=fr">CSV (Download)</a></td>
                         </tr>
+
+
+
                         <tr>
-                            <td>Report:</td>
+                            <td>Report - English:</td>
                             <td><a class="btn btn-default" href="./api-v1/report/?lang=en&type=json">Json</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/report/?lang=en&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=report&lang=en">CSV (Download)</a></td>
+                        </tr>
+                        <tr>
+                            <td>Report - French:</td>
+                            <td><a class="btn btn-default" href="./api-v1/report/?lang=fr&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./api-v1/report/?lang=fr&type=xml">XML</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=report">CSV (Download)</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=report&lang=fr">CSV (Download)</a></td>
                         </tr>
+
+
                         <tr>
-                            <td>All Report by Drug Name:<input type="text" id="strDrugName" size="15" /></td>
+                            <td>All Report by Drug Name - English:<input type="text" id="strDrugName" size="15" /></td>
                             <td><a class="btn btn-default" href='' onclick="this.href='./api-v1/report/?drug_name=' + '%' + document.getElementById('strDrugName').value + '%' + '&lang=en&type=json'">Json</a></td>
+                            <td><a class="btn btn-default" href='' onclick="this.href = './api-v1/report/?drug_name=' + '%' + document.getElementById('strDrugName').value + '%' + '&lang=en&type=xml'">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=drugName&lang=en">CSV (Download)</a></td>
+                        </tr>
+                        <tr>
+                            <td>All Report by Drug Name - French:<input type="text" id="strDrugName" size="15" /></td>
+                            <td><a class="btn btn-default" href='' onclick="this.href='./api-v1/report/?drug_name=' + '%' + document.getElementById('strDrugName').value + '%' + '&lang=fr&type=json'">Json</a></td>
                             <td><a class="btn btn-default" href='' onclick="this.href = './api-v1/report/?drug_name=' + '%' + document.getElementById('strDrugName').value + '%' + '&lang=fr&type=xml'">XML</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=drugName">CSV (Download)</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=drugName&lang=fr">CSV (Download)</a></td>
                         </tr>
+
+
+
                         <tr>
-                            <td>Seriousness:</td>
+                            <td>Seriousness - English:</td>
                             <td><a class="btn btn-default" href="./api-v1/seriousness/?lang=en&type=json">Json</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/seriousness/?lang=en&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=seriousness&lang=en">CSV (Download)</a></td>
+                        </tr>
+                        <tr>
+                            <td>Seriousness - French:</td>
+                            <td><a class="btn btn-default" href="./api-v1/seriousness/?lang=fr&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./api-v1/seriousness/?lang=fr&type=xml">XML</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=seriousness">CSV (Download)</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=seriousness&lang=fr">CSV (Download)</a></td>
                         </tr>
+
+
+
                         <tr>
-                            <td>Source:</td>
+                            <td>Source - English:</td>
                             <td><a class="btn btn-default" href="./api-v1/source/?lang=en&type=json">Json</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/source/?lang=fr&type=xml">XML</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=source">CSV (Download)</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/source/?lang=en&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=source&lang=en">CSV (Download)</a></td>
                         </tr>
                         <tr>
-                            <td>All Report Info:</td>
-                            <td><a class="btn btn-default" href="./api-v1/reportinfo/?lang=en&type=json">Json</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/reportinfo/?lang=fr&type=xml">XML</a></td>
-                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=info">CSV (Download)</a></td>
+                            <td>Source - French:</td>
+                            <td><a class="btn btn-default" href="./api-v1/source/?lang=fr&type=json">Json</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/source/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=source&lang=fr">CSV (Download)</a></td>
                         </tr>
+
+
+
+                        <tr>
+                            <td>All Report Info - English:</td>
+                            <td><a class="btn btn-default" href="./api-v1/reportinfo/?lang=en&type=json">Json</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/reportinfo/?lang=en&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=info&lang=en">CSV (Download)</a></td>
+                        </tr>
+                        <tr>
+                            <td>All Report Info - French:</td>
+                            <td><a class="btn btn-default" href="./api-v1/reportinfo/?lang=fr&type=json">Json</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/reportinfo/?lang=fr&type=xml">XML</a></td>
+                            <td><a class="btn btn-default" href="./api-v1/CSV/DownloadCSV?dataType=info&lang=fr">CSV (Download)</a></td>
+                        </tr>
+
                     </tbody>
                 </table>
 
